# ndev

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
ndev/: app.py  shutil_ext.py
ndev/commands/: release.py
ndev/services/: listener.py  packer.py
src/ndev/: app.py  hx_urllib.py  shutil_ext.py  types.py
src/ndev/commands/: git_sync.py  release.py
src/ndev/impl/: listener.py
src/ndev/protocols/: verbosity.py
src/ndev/services/: packer.py  releaser.py
src/ndev/services/git/: __init__.py  git_syncer.py  git_syncer_conf.py  syncer.py  tool.py
src/ndev/services/releaser/: __init__.py  requirements.py
tests/: test_packer.py  test_patcher.py  test_release_command.py  test_releaser.py
tests/fixtures/01_simple_project/: pyproject.toml
tests/fixtures/05_project_with_copy_repo/: pyproject.toml
tests/fixtures/10_project_with_code_no_todo/: pyproject.toml  some_python_code.py
tests/fixtures/11_project_with_code_with_todo/: pyproject.toml
tests/fixtures/21_patch_files/: module_with_link_1.py  pyproject.toml
