[project]
name = "ndev"
version = "0.7.1"
description = "Python projects management toolset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cleo",
    "gitpython>=3.1.44",
    "pydantic>=2.9.2",
    "pygit2>=1.19",
    "tomli (>=2.0.1,<3.0.0) ; python_version < '3.11'",
]
scripts = { ndev = "ndev.app:main" }

# TODO: move to uv backend
#[build-system]
#requires = ["uv>=0.6.2,<0.7"]
#build-backend = "uv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true
line-length = 100

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "FURB", # refurb
    "I", # isort
    "LOG", # flake8-logging
    "N", # pep8-naming
    "NPY", # numpy specific checks
    "PERF", # perflint
    "PIE", # flake8-pie
    "PGH", # pygrep
    "PL", # pylint
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "PLR0912", # Too many branches
    "PERF401", # Use a list comprehension to create a transformed list
]

[tool.uv]
preview = true
package = true
index-url = "https://pypi.org/simple"


[tool.ndev]
release-root = "."
common-ignores = [
    "__pycache__",
    ".venv",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.3.3",
    "ruff>=0.14.5",
]
