[project]
name = "ndev"
version = "0.1.0"
description = "Python projects management toolset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cleo",
]
scripts = {ndev = "ndev.app:main"}

[tool.ndev]
release_root = "."
copy-repo-src = [
    {from = "git@github.com:numdes/ndev.git", to = "libs/ndev", ref = "main"},
]